--- a/docker-compose-http/Dockerfile
+++ b/docker-compose-http/Dockerfile
@@ -1,6 +1,14 @@
-FROM node:10-alpine
+FROM node:16-buster
 
-RUN apk update
+RUN apt-get update && apt-get upgrade -y
+
+RUN apt-get install -y \
+    python3 \
+    python3-pip
+
+RUN pip3 install docker-compose
+
+RUN which docker-compose
 
 WORKDIR /app
 
